# DialSome

./: .gitignore  CMakeLists.txt  Main.qml  docker-compose-build.yml  resources.qrc
android/: AndroidManifest.xml
android/src/com/github/biltudas1/dialsome/: AndroidUtils.java  CallActionReceiver.java  CallForegroundService.java  CallStateManager.java  MainActivity.java  MyFirebaseMessagingService.java  WebRTCManager.java
api/: main.py
api/core/: settings.py
api/models/: contact.py  contacts.py  voice.py
api/routers/: usersRouter.py  voicecallRouter.py
api/services/: fcm.py
src/: backend.cpp  backend.h  fcmmanager.cpp  fcmmanager.h  utils.cpp  utils.h
src/lib/: apiconstrains.h  apiservice.cpp  apiservice.h  settings.cpp  settings.h
ui/: CallingPage.qml  IncomingCallPage.qml  LoginPage.qml  MainPage.qml  SelectContactPage.qml  SettingsPage.qml  Theme.qml  ThemedIcon.qml
